--- a/www/index.html
+++ b/www/index.html
@@ -7,25 +7,30 @@
 
 
     <!-- compiled css output -->
-    <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
   </head>
+
   <body ng-app="starter">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">Ionic Modular Seed Blank Starter</h1>
       </ion-header-bar>
       <ion-content>
       </ion-content>
     </ion-pane>
+
+
+    <!-- inject:js -->
+
+    <!-- ionic/angularjs js -->
+    <script src="vendor/ionic/js/ionic.bundle.js"></script>
+
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js"></script>
+
+    <!-- Bootstrapping -->
+    <script src="js/app.js"></script>
   </body>
 </html>
