--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
 
     <!-- inject:js -->
     <!-- Bootstrapping -->
+    <script src="src/others.js"></script>
     <script src="src/app.js"></script>
     <script src="src/app.config.js"></script>
     <script src="src/app.run.js"></script>
