improved dashboard in two steps and with some images

--- a/www/index.html
+++ b/www/index.html
@@ -61,6 +61,7 @@
     <script src="src/dashboard/config.route.js"></script>
     <script src="src/dashboard/dashboard.ctrl.js"></script>
     <script src="src/dashboard/dashboard.service.js"></script>
+    <script src="src/dashboard/ionic/ionic.ctrl.js"></script>
 
     <!-- Login module -->
     <script src="src/login/login.module.js"></script>
