--- a/www/src/intro/intro.html
+++ b/www/src/intro/intro.html
@@ -1,12 +1,18 @@
 <ion-view hide-nav-bar="true">
     <ion-content padding="true" scroll="false">
-        <h1>Ionic Modular Seed Starter</h1>
-        <p>This is an example of Ionic modular seed. It has an intro view and a dashboard view, just to show a simple navigation history.</p>
-        <p>Other navigation options like tabs, menus can be added following Ionic Framework documentation at <a href="http://ionicframework.com/docs/">http://ionicframework.com/docs/</a></p>
+        <h1 class="text-center">Ionic Modular Seed</h1>
+        <div class="mgt-40">
+            <img src="img/ionic-logo-landscape.png" width="100%">
+        </div>
+        <div class="mgt-40">
+            <p>This is an example of Ionic modular seed. It has an intro view and a dashboard view, just to show a simple navigation history.</p>
+            <p>Other navigation options like tabs, menus can be added following Ionic Framework documentation at <a href="http://ionicframework.com/docs/">http://ionicframework.com/docs/</a></p>
+        </div>
 
-        <div class="row">
+
+        <div class="row" style="position: absolute; bottom: 0; left: 0;">
            <div class="col col-50">
-               <button class="button button-block button-default" ui-sref="dashboard">Continue</button>
+               <button class="button button-block button-default" ui-sref="dashboard.web-technologies">Continue</button>
            </div>
            <div class="col col-50">
                <button class="button button-block button-positive" ui-sref="login">Sign-In</button>
