--- a/www/src/dashboard/dashboard.html
+++ b/www/src/dashboard/dashboard.html
@@ -1,18 +1,7 @@
-<ion-view hide-back-button="true">
+<ion-view >
     <ion-nav-title>Dashboard</ion-nav-title>
 
     <ion-content padding="true">
-        <h3>Create hybrid mobile apps with the web technologies you love.</h3>
-        <p>Free and open source, Ionic offers a library of mobile-optimized HTML, CSS and JS components for building highly interactive apps.</p>
-        <p>Built with Sass and optimized for AngularJS.</p>
-
-        <button class="button icon-right ion-chevron-right button-positive" ui-sref="dashboard">Continue</button>
-
-        <h3>Develop following the well-known community guidelines.</h3>
-        <p>AngularJS style guides by <a href="https://github.com/johnpapa/angular-styleguide">John Papa</a> and <a href="https://github.com/toddmotto/angularjs-styleguide">Todd Motto</a></p>
-        <p>AngularJS modular by <a href="https://github.com/johnpapa/ng-demos/tree/master/modular">John Papa</a></p>
-        <p><a href="http://smacss.com">SMACSS (Scalable and Modular Architecture for CSS)</a> style guide based on the <a href="https://github.com/jonathanpath/SASS-SMACSS">SMACSS + SCSS starter</a>. Inspired in Jonathan Snook and Jonathan Path.</p>
-
-        <button class="button icon-left ion-chevron-left button-positive" ui-sref="intro">Back</button>
+        <div ui-view></div>
     </ion-content>
 </ion-view>
